 * Getting to the device: Fix clan colors
 * Various minor tweaks and bugfixes

Controls:
 + Add control to unselect current weapon (no key chosen by default)
 + Allow to leave a control unused
 + New chat command: “/help room” (shows room chat commands within the game)

Graphics:
 + Show contour of flying saucer when in highly opaque water
 + Remove visual clutter in cut scenes
 * Fix speech bubbles overlapping in the wrong order
 * Fix wrong ice beam angle if it goes diagonally up out of map through world wrap
 * Fix double water splash when flying saucer drowns

Game HUD:
 + Colorize switching arrows, pointing arrow and target cross in clan color
 + Skip ammo menu animation when playing with turn time of 10s or less
 + Don't show crate spawn message for initial crates in missions
 + Display player name of own teams in online games
 * Fix last 2 characters in demo chat being missing
 * Hide most HUD elements in cinematic mode
 * Don't show "F1", "F2", etc. in ammo menu if these aren't the actual slot keys
 * Fix wind bar animation not looping properly
 * Fix airplane line being drawn above many HUD elements
 * Suppress “<team> is gone.” message at end of game
 * Fix game engine ignoring appropriate number formatting of user language

Frontend:
 + Restructure credits
 + Credits screen in main menu is now translatable
 + More intelligent automatic mission selection in campaign screen
 * Fix force-locked schemes getting unlocked when changing map types

Lua API:
 + New call: SaveMissionVar(varname, value): Save value to mission variable (variable for non-campaign mission)
 + New call: GetMissionVar(varname): Get value of mission variable
 + New call: SetTurnTimePaused(isPaused): Call with true to pause turn time, false to unpause
 + New call: GetTurnTimePaused(): Returns true if turn time is paused due to Lua
 + New call: AddMissionTeam(color): Add mission team, i.e. the team selected by player in campaign/mission page