@@ -51,6 +51,7 @@ Controls:
 Graphics:
  + Show contour of flying saucer when in highly opaque water
  + Remove visual clutter in cut scenes
+ + Add setting to set default/initial zoom
  * Fix speech bubbles overlapping in the wrong order
  * Fix wrong ice beam angle if it goes diagonally up out of map through world wrap
  * Fix double water splash when flying saucer drowns
